# social_npc

./: .gitignore  Cargo.toml  README.md
examples/: basic_npc.rs
src/: engine.rs  lib.rs  memory.rs  parser.rs  traits.rs  types.rs
src/llm/: mod.rs
src/prompts/: builder.rs  loader.rs  mod.rs  templates.rs
