[package]
name = "social_npc"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A library for managing NPC social behaviors and memory systems in games"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/social_npc"
keywords = ["npc", "ai", "game", "memory", "social"]
categories = ["game-development", "simulation"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }